--- a/app/src/main/res/layout/cal.xml
+++ b/app/src/main/res/layout/cal.xml
@@ -18,12 +18,13 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/GridLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="50dp"
         android:columnCount="4"
         android:orientation="horizontal"
